[gd_scene load_steps=24 format=2]

[ext_resource path="res://results/Results.gd" type="Script" id=1]
[ext_resource path="res://sprites/Fullscreens-5.png.png" type="Texture" id=2]
[ext_resource path="res://fonts/Ramabhadra/Ramabhadra-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://sprites/gems.png" type="Texture" id=4]
[ext_resource path="res://sprites/Ranks.png" type="Texture" id=5]
[ext_resource path="res://sprites/text.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 72
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="DynamicFont" id=7]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 3, 4, 196, 194 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 215, 3, 172, 193 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 430, 12, 148, 187 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 635, 15, 133, 181 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 26, 203, 146, 183 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 226, 232, 143, 147 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 435, 206, 134, 196 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 626, 210, 148, 193 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 19, 399.429, 160, 202 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 32, 497, 231, 97 )

[node name="Results" type="Node2D"]
script = ExtResource( 1 )

[node name="bg" type="Sprite" parent="."]
position = Vector2( 300.568, 255.449 )
texture = ExtResource( 2 )

[node name="ControlsText" type="RichTextLabel" parent="."]
margin_left = 254.0
margin_top = 475.0
margin_right = 394.0
margin_bottom = 509.0
custom_fonts/normal_font = SubResource( 1 )
text = "Menu: ENTER"
scroll_active = false

[node name="ScoreText" type="RichTextLabel" parent="."]
margin_left = 94.0
margin_top = -10.2513
margin_right = 666.0
margin_bottom = 121.749
custom_fonts/normal_font = SubResource( 2 )
text = "100000000000"
scroll_active = false

[node name="ScoreLabelText" type="RichTextLabel" parent="."]
margin_left = 20.0
margin_top = 47.7497
margin_right = 81.0
margin_bottom = 80.7497
custom_fonts/normal_font = SubResource( 3 )
text = "SCORE"
scroll_active = false

[node name="TotalLabelText" type="RichTextLabel" parent="."]
margin_left = 355.077
margin_top = 304.23
margin_right = 476.077
margin_bottom = 349.23
custom_fonts/normal_font = SubResource( 1 )
text = "TOTAL"
scroll_active = false

[node name="Green" type="Sprite" parent="."]
position = Vector2( 370.512, 156.868 )
texture = SubResource( 4 )

[node name="Yellow" type="Sprite" parent="."]
position = Vector2( 370.512, 210.132 )
texture = SubResource( 5 )

[node name="Red" type="Sprite" parent="."]
position = Vector2( 372.268, 265.153 )
texture = SubResource( 6 )

[node name="PercentText" type="RichTextLabel" parent="."]
margin_left = 205.783
margin_top = 186.69
margin_right = 386.783
margin_bottom = 276.69
rect_scale = Vector2( 0.67, 1 )
custom_fonts/normal_font = SubResource( 7 )
text = "100.0%"
scroll_active = false

[node name="GreenText" type="RichTextLabel" parent="."]
margin_left = 414.0
margin_top = 140.0
margin_right = 530.0
margin_bottom = 176.0
custom_fonts/normal_font = SubResource( 1 )
text = "X 1000000"

[node name="YellowText" type="RichTextLabel" parent="."]
margin_left = 414.0
margin_top = 194.0
margin_right = 534.0
margin_bottom = 237.0
custom_fonts/normal_font = SubResource( 1 )
text = "X 1000000"

[node name="RedText" type="RichTextLabel" parent="."]
margin_left = 414.0
margin_top = 250.0
margin_right = 542.0
margin_bottom = 295.0
custom_fonts/normal_font = SubResource( 1 )
text = "X 1000000"

[node name="TotalText" type="RichTextLabel" parent="."]
margin_left = 428.077
margin_top = 304.23
margin_right = 535.077
margin_bottom = 347.23
custom_fonts/normal_font = SubResource( 1 )
text = "1000000"

[node name="GreenPercentText" type="RichTextLabel" parent="."]
margin_left = 516.295
margin_top = 140.0
margin_right = 581.295
margin_bottom = 172.0
custom_fonts/normal_font = SubResource( 1 )
text = "88.8%"
scroll_active = false

[node name="YellowPercentText" type="RichTextLabel" parent="."]
margin_left = 516.568
margin_top = 194.0
margin_right = 594.568
margin_bottom = 247.0
custom_fonts/normal_font = SubResource( 1 )
text = "88.8%"
scroll_active = false

[node name="RedPercentText" type="RichTextLabel" parent="."]
margin_left = 516.0
margin_top = 250.0
margin_right = 614.0
margin_bottom = 286.0
custom_fonts/normal_font = SubResource( 1 )
text = "88.8%"
scroll_active = false

[node name="StreakLabelText" type="RichTextLabel" parent="."]
margin_left = 354.077
margin_top = 334.23
margin_right = 447.077
margin_bottom = 370.23
custom_fonts/normal_font = SubResource( 1 )
text = "STREAK"
scroll_active = false

[node name="StreakText" type="RichTextLabel" parent="."]
margin_left = 429.077
margin_top = 334.23
margin_right = 551.077
margin_bottom = 377.23
custom_fonts/normal_font = SubResource( 1 )
text = "1000000"

[node name="RankF" type="Sprite" parent="."]
position = Vector2( 108.871, 237.643 )
texture = SubResource( 8 )

[node name="RankE" type="Sprite" parent="."]
visible = false
position = Vector2( 108.871, 235.301 )
texture = SubResource( 9 )

[node name="RankD" type="Sprite" parent="."]
visible = false
position = Vector2( 111.797, 241.155 )
texture = SubResource( 10 )

[node name="RankC" type="Sprite" parent="."]
visible = false
position = Vector2( 113.553, 242.911 )
texture = SubResource( 11 )

[node name="RankB" type="Sprite" parent="."]
visible = false
position = Vector2( 118.821, 235.301 )
texture = SubResource( 12 )

[node name="RankA" type="Sprite" parent="."]
visible = false
position = Vector2( 115.309, 239.399 )
texture = SubResource( 13 )

[node name="RankS" type="Sprite" parent="."]
visible = false
position = Vector2( 118.821, 237.643 )
texture = SubResource( 14 )

[node name="RankSS" type="Sprite" parent="."]
visible = false
position = Vector2( 112.968, 238.813 )
texture = SubResource( 15 )

[node name="RankSSS" type="Sprite" parent="."]
visible = false
position = Vector2( 112.968, 235.301 )
texture = SubResource( 16 )

[node name="NewRecordText" type="Sprite" parent="."]
position = Vector2( 263.104, 334.514 )
scale = Vector2( 0.723807, 0.704319 )
texture = SubResource( 17 )
